--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
             </div>
 
         </div>
-
+        <div>
+            <p>Copyright © 2023 WeatherApp Developed by&nbsp;<a href="https://sosamson.com" target = "_blank" 
+                rel = "noopener noreferrer">Sosamson</a>. All rights reserved.</p>
+            </div>
     </div>
 
 <script src="script.js"></script>
